Fix Overflow in the navbar not being shown

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,10 @@
 
+ul div img {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+}
+
 
 .footer {
   position: absolute;
